2007-07-27  Eitan Isaacson  <eitan@ascender.com>

	* macaroon/playback/keypress_mimic.py: Added smarter sequence
	steps for key combos and string typing.
	* macaroon/playback/playback_sequence.py: Sequence steps now
	inform the sequence object that they finished with a signal. Added
	event caching in the sequence class so a focus event could be
	anticipated by the sequence step before it.
	* macaroon/record/about.py: s/Accerciser/Macaroon/
	* macaroon/record/main.py: Added playback capability, not
	perfect. Added capability to switch between "level 1" and "level
	2" recording, level 1 means recording each descreet 	
	key press and release, level 2 tries to make compound steps out of
	key presses.
	* macaroon/record/script_factory.py: Added "level 2" scripts.

2007-07-27  Eitan Isaacson  <eitan@ascender.com>

	* macaroon/playback/keyboard_mimic.py: Increased default timout
	in WaitForWindowActivate to 30 seconds.

2007-07-26  Willie Walker  <william.walker@sun.com>

	* macaroon/record/script_factory.py: add simple comment
	before WaitForFocus lines to give us a hint about the
	name of the object we'd like to get focus.

2007-07-26  Willie Walker  <william.walker@sun.com>

	* configure.in: uncomment out IT_PROG_INTLTOOL([0.35.0]) line
          from before and add in AC_CONFIG_AUX_DIR(./) line.  Seems to
	  solve the problem nicely (thanks Eitan!).  Also changed
	  Accerciser reference to Macaroon.

2007-07-26  Willie Walker  <william.walker@sun.com>

	* aclocal.m4: remove since it is autogenerated.

	* configure.in: comment out IT_PROG_INTLTOOL([0.35.0]) line
          for now to prevent autogen failures due to what appears to
          be nested autogen projects (this one and accerciser above)

2007-07-26  Eitan Isaacson  <eitan@ascender.com>

	* po/Makefile.in.in: Removed. This is autogenerated.
	
2007-07-26  Eitan Isaacson  <eitan@ascender.com>

	* Initial import into temporary home in accerciser on gnome.org's SVN.